--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"passport-linkedin": "^1.0.0",
 		"passport-linkedin-oauth2": "^2.0.0",
 		"passport-twitter": "^1.0.4",
-		"pg": "^8.5.1"
+		"pg": "^8.5.1",
+		"swagger-ui": "^3.44.0"
 	},
 	"devDependencies": {
 		"minimist": ">=0.2.1",
